// Copyright 2023 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Shield 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.

syntax = "proto3";
package io.harness.eventsframework.schemas.entity;

import "970-ng-commons/src/main/proto/io/harness/eventsframework/schemas/entity/entity_usage_data.proto";
import "970-ng-commons/src/main/proto/io/harness/eventsframework/schemas/entity/pipeline_execution_usage_data.proto";

option java_multiple_files = true;
option go_package = "970_ng_commons";

message EntityUsageDetailProto {
  string usageType = 1;
  oneof usageData {
    io.harness.eventsframework.schemas.entity.EntityUsageDataProto baseUsageData = 2;
    io.harness.eventsframework.schemas.entity.PipelineExecutionUsageDataProto pipelineExecutionUsageData = 3;
  }
}
